--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <div class="cta">
           <a class="btn primary" href="#contact">Get in touch</a>
-          <a class="btn" href="assets/Jubair_Rifat_CV.pdf" download>Download CV</a>
+          <a class="btn" href="assets/Jubair Ibn Malik Rifat_CV.pdf" download>Download CV</a>
         </div>
       </div>
       <div class="card">
