--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="card">
         <h2>Latest News</h2>
         <ul class="list" aria-label="Latest news">
-          <li class="item"><strong>Sept 2025</strong>: Our paper in <em>Pacific Symposium on Biocomputing (PSB) 2026</em> on single‑cell/bulk-cell multi‑omics is accepted </li>
+          <li class="item"><strong>Sept 2025</strong>: Our paper in <em>Pacific Symposium on Biocomputing (PSB) 2026</em> on single‑cell/bulk-cell multi‑omics is accepted.</li>
           <li class="item"><strong>Apr 2025</strong>: Our paper in <em>Scientific Reports</em> on single‑cell multi‑omics for CRC published. <a href="https://www.nature.com/articles/s41598-025-97476-4" target="_blank" rel="noopener">Read</a></li>
           <li class="item"><strong>Oct 2024</strong>: Poster at RSGDREAM 2024 on scRNA‑seq clustering with graph debiased contrastive learning.</li>
         </ul>
