--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div class="card">
         <h2>Quick Links</h2>
         <ul class="list">
-          <li class="item"><a href="https://scholar.google.com/" target="_blank" rel="noopener">Google Scholar</a></li>
+          <li class="item"><a href="https://scholar.google.com/citations?hl=en&user=FGjE6vcAAAAJ/" target="_blank" rel="noopener">Google Scholar</a></li>
           <li class="item"><a href="https://github.com/" target="_blank" rel="noopener">GitHub</a></li>
           <li class="item"><a href="mailto:your.email@example.com">Email</a></li>
         </ul>
